Abort using concept map for everyday log, use keyword cloud instead.

--- a/source/_posts/19/03/18/190318m144719.md
+++ b/source/_posts/19/03/18/190318m144719.md
@@ -21,6 +21,7 @@ date: 2019-03-18 14:47:19
         <ol>
           <li><strong>2019-03:</strong> <a href="/treegbBlog/19/03/18/190318m150030">190318 ( Log table ) 2019-03 # 190318m150030</a>.</li>
           <li><strong>2019-04:</strong> <a href="/treegbBlog/19/04/01/190401m013644">190401 ( Log table ) 2019-04 # 190401m013644</a>.</li>
+          <li><strong>2019-05:</strong> <a href="/treegbBlog/19/05/01/190501m130707">190501 ( Log table ) 2019-05 # 190501m130707</a>.</li>
         </ol>
       </li>
     </ol>
