--- a/source/_posts/19/04/01/190401m013644.md
+++ b/source/_posts/19/04/01/190401m013644.md
@@ -42,6 +42,8 @@ date: 2019-04-01 01:36:44
   <li><strong>2019-04-26:</strong> <a href="#190426m005457">Section</a>.</li>
   <li><strong>2019-04-27:</strong> <a href="#190426m231145">Section</a>.</li>
   <li><strong>2019-04-28:</strong> <a href="#190428m000055">Section</a>.</li>
+  <li><strong>2019-04-29:</strong> <a href="#190428m223242">Section</a>.</li>
+  <li><strong>2019-04-30:</strong> <a href="#190430m082916">Section</a>.</li>
   <li><strong>{ Pollash }:</strong> <a href="#190419m212225">Section</a>.</li>
 </ol>
 <h2>2019-04<a id="190401m022048"></a></h2>
@@ -533,7 +535,7 @@ https://www.youtube.com/user/AmericanInstituteTW/videos
   <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-27.svg" alt="2019-04-27">
 </div>
 <ol>
-  <li><strong> - How do you eat an elephant:</strong> I have this thought coming out after watching the talk <a href="https://youtu.be/4FJEbzPhqq8">王佑哲 Eugene Wang - { Inside } 共同創辦人 - TEDxNTUST</a>. You eat an elephant bit by bit. Only through modularization and components then you can design and manage a complex system. Only through fragment the time schedule then you can finished the project before dead line. Only throught lower down the cognitive load of every habits, then you can deal with procrastination and overcome the reluctance. // Natural is always <strong>complex</strong> (not simple) in natural, and human perfer <strong>simple</strong> all the time. When human have to face complex natural, they often figure out some tips, design pattern, solution, to deal with complex (is in all natural) problem, with simple (human friendly) way. This is why the wisdom "Less is More" is so true in many aspects. But I think we need to understand, simple is <strong>by designed (by human)</strong>, it is <strong>not how natural works</strong>. Natural tends to be complex and <strong>multiple dimensional</strong> inherently, and human tends to like simple things inherently. When we can find out a specific simple way to deal with a specific complex natural, they <strong>"matched"</strong> excellently and the solution will be considered as a good solution.</li>
+  <li><strong> - How do you eat an elephant:</strong> I have this thought coming out after watching the talk <a href="https://youtu.be/4FJEbzPhqq8">王佑哲 Eugene Wang - { Inside } 共同創辦人 - TEDxNTUST</a>. You eat an elephant bit by bit. Only through modularization and components then you can design and manage a complex system. Only through fragment the time schedule then you can finished the project before dead line. Only through lower down the cognitive load of every habits, then you can deal with procrastination and overcome the reluctance. // Natural is always <strong>complex</strong> (not simple) in natural, and human perfer <strong>simple</strong> all the time. When human have to face complex natural, they often figure out some tips, design pattern, solution, to deal with complex (is in all natural) problem, with simple (human friendly) way. This is why the wisdom "Less is More" is so true in many aspects. But I think we need to understand, simple is <strong>by designed (by human)</strong>, it is <strong>not how natural works</strong>. Natural tends to be complex and <strong>multiple dimensional</strong> inherently, and human tends to like simple things inherently. When we can find out a specific simple solution to deal with a specific complex natural, they <strong>"matched"</strong> excellently and that solution will be considered as a good solution.</li>
   <li><strong>( Video ) { Tiffany Poon } - Vlog - How to Balance School + Piano - #07:</strong> <a href="https://youtu.be/BM-JfaGxKFY">Link</a>. Time management, discipline and rationality, always planning ahead, setting priority and only focus on the important thing.</li>
   <li><strong>( Music ) ( Classical ) { Tiffany Poon } - Beethoven Sonata Op.10 No.3:</strong> <a href="https://youtu.be/uWBABv4XeLk">Link</a>.</li>
   <li><strong>{ Traversy Media } - Quality youtube channel about web development:</strong> <a href="https://youtu.be/raoOoWU7DI0?t=431">Link</a> (original title: <u>My Top 10 Learning Methods For Self Taught Developers</u>). Including <a href="https://www.youtube.com/channel/UCW5YeuERMmlnqo4oq8vwUpg/featured">The Net Ninja</a>, <a href="https://www.youtube.com/user/DevTipsForDesigners/featured">DevTips</a>, <a href="https://www.youtube.com/user/LevelUpTuts/featured">LevelUpTuts</a>, <a href="https://www.youtube.com/channel/UCSJbGtTlrDami-tDGPUV9-w/videos">Academind</a>, <a href="https://www.youtube.com/user/DesignCourse/videos">DesignCourse</a> (art, graphic design), <a href="https://www.youtube.com/channel/UCtxCXg-UvSnTKPOzLH4wJaQ">Coding Tech</a> (conferences, talks), <a href="https://www.youtube.com/user/pizzapokerguy87/featured">Dylan Israel</a>.</li>
@@ -554,7 +556,7 @@ https://www.youtube.com/user/AmericanInstituteTW/videos
       <li><strong>Git and deployment:</strong> ?? days. Could be practice when collaborating with Pollash and Woody.</li>
       <li><strong>Webpack:</strong> ?? days. Must know.</li>
       <li><strong>Database:</strong> ?? days. Use mysql, and find the way to do object programming with database, instead of low level SQL language.</li>
-      <li><strong>Algorithm and data structure:</strong> ?? days. Maybe no time to lean this at all. But if I need to learn, learn <a href="https://github.com/amejiarosario/dsa.js">Data Structure and Algorithms in Javascript - dsa.js - suggested by Pollash</a> first.</li>
+      <li><strong>Algorithm and data structure:</strong> ?? days. Maybe no time to learn this at all. But if I need to learn, learn <a href="https://github.com/amejiarosario/dsa.js">Data Structure and Algorithms in Javascript - dsa.js - suggested by Pollash</a> first.</li>
       <li><strong>{ Less } ( CSS pre-processor ):</strong> ?? days. Optional.</li>
       <li><strong>Side project { Doggo }:</strong> Estimate finished in 2019-05-03, and freeze it without doing huge improvement, without doing iteration (v2, v3 ...). I should spend time on new projects, multiple projects, instead of polishing the same one to excellent.</li>
       <li><strong>Side project 2:</strong> ?? days.</li>
@@ -577,7 +579,72 @@ https://www.youtube.com/user/AmericanInstituteTW/videos
   <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-28.svg" alt="2019-04-28">
 </div>
 <ol>
-  <li><strong>:</strong> <a href="">Link</a>.</li>
+  <li><strong>( Philosophy ) The narrow "Zone" of lifestyle:</strong> 看完 <a href="https://youtu.be/EtisR5GY-n0?t=442">館長的壓力不是大家能了解的，一年工作365天，賺再多錢其實一點也不快樂!</a> 後，我開始思考一個問題。 // 人生的規則處處充滿悖論和矛盾，很多規則並不是順著邏輯在運作的 (所以你會一直抓不到人生的正確的規則是什麼)。另外，快樂和幸福可以用 "曖昧" 這個概念來比喻，你愈想主動追求它 (快樂)，它就會消失，你如果放棄追求它，它又跑過來主動靠近你，但如果你又想靠近，它又開始跑遠 ... 。這樣的情況是不能靠邏輯推理出來的，人生的規則根本是一場謎，難以理解。// 我的猜測和假設是這樣 - 大約知道的通用規則是，作為一個 "人" 這樣的一個奇怪的物種，我們只能讓自己維持在一個非常特定狹小的區域，狀態，生活模式 (我簡稱 "Zone")，這樣我們就可以獲得快樂和幸福。而如果我們的生活方式超出這個 Zone，我們只會在人生裡面感受到更多的痛苦。這個 Zone 通常包含 - <strong>在追求一個目標，永遠高度專注在某事 (活在當下)，在做的事情有挑戰性，在做的事情是有意義的，有跟社群 (其他人) 有某種連結關係，不主動追求快樂 (而是被動的讓快樂來找你) ...</strong> 所以，錢多不多就不太是重點了，因為錢多，不代表就會進到這個 Zone 裡面。不過我們在自然情況下是不會刻意的讓自己保持在這個 Zone 裡面的 (享樂是人的天性之一)，只有當我們意識到 (並且有足夠的人生經驗，以及教育)，人生要得到幸福，唯一辦法只能讓自己進到這個 Zone，我們才會刻意 (非自然) 的每天讓自己保持在這個 Zone 裡面。</li>
+  <li><strong>( Science ) Why porn changes the brain:</strong> <a href="https://youtu.be/DclqE-9vFgY">Link</a>.</li>
+  <li><strong>( Music ) ( Classical ) Kate Liu - Andante Spianato and Grande Polonaise Brillante in E flat major Op. 22 (second stage):</strong> <a href="https://youtu.be/AO6k_ipgEsI">Link</a>.</li>
+  <li><strong>( Music ) ( Classical ) Tiffany Poon - Bach Partita No.2 in C Minor, BWV 826:</strong> <a href="https://youtu.be/wdN6mLJUTig">Link</a>.</li>
+  <li><strong>( Music ) ( Classical ) Beethoven - Concerto pour piano n°3 - Alice Sara Ott / Orchestre philharmonique de Radio France:</strong> <a href="https://youtu.be/PM0HqmptYlY">Link</a>. // Disease - In February 2019, <code>Alice Sara Ott</code> announced on Instagram that she had been diagnosed with <a href="https://en.wikipedia.org/wiki/Multiple_sclerosis">{ multiple sclerosis }</a>.</li>
+  <li><strong>( Music ) ( Electronic ) Tobu - Colors:</strong> <a href="https://youtu.be/eyLml-zzXzw">Link</a>. Highly focus and dedicated.</li>
+  <li><strong>( Vue.js ) Pitfall of thinking you have to keep parent and child component ,, data ,, syncing:</strong>
+    <ol>
+      <li><strong>I finally accept:</strong> I finally accept and understand that we don't need to sync between parent and child compoent ,, data.</li>
+      <li><strong>By reading material:</strong> After reading <a href="https://www.cnblogs.com/penghuwan/p/7473375.html">三種子組件向父組件中傳遞數據的方式</a>, <a href="https://forum.vuejs.org/t/pass-object-via-props-reference-vs-emit-value-best-practices/45683">Pass object via props: Reference vs. emit value best practices</a>, and <a href="https://vuejs.org/v2/guide/components-custom-events.html">vue ,, .sync Modifier</a>, I get this conclusion.</li>
+      <li><strong>Experiment:</strong> I tried to make a <code>for</code> loop in child component, inside this for loop, I keep updating props that come from parent with <code>emit</code> event, I also have a emit handler in parent component to update this data (to what child feeds) when the emit is triggered. // The result of this experiment is, unless I use Async and Await to make a little delay after each emit, it will not sync in real time (for loop is running too fast)</li>
+      <li><strong>Final solution:</strong> You don't need to update child data to parent data in real time (for example, you don't need to <code>emit</code> in every loop of <code>for</code> loop, this will be async since emit is event based, not io-block based), you do some calculation in child component, and when all calculation is finished, you push it to parent once.</li>
+      <li><strong>Pitfall of passing reference to child component using props:</strong> In the link, they mentioned you can pass parent component object to child component using <code>props</code> (since it is object, it is passing <u>reference</u>, instead of <u>value</u>), if you try to modify (mutate) that <code>props</code>, <strong>it works and vue don't complain about this!</strong> (vue can't detect this)! In fact because of <u>passing reference</u>, this make the data <strong>sync</strong> in real time (since they are same object at all), but this is very bad idea, it causing anylysis very hard, so don't do this. I wrote my Doggo project like this at first, it works but it is bad practice, don't use like this.</li>
+    </ol>
+  </li>
+  <li><strong>( Vue.js ) Differences between { Computed } and { Watch }:</strong> <a href="https://cythilya.github.io/2017/04/15/vue-computed/#%E6%AF%94%E8%BC%83-computed-%E8%88%87-watch">Link</a>.</li>
+  <li><strong>( Vue.js ) { Computed } ,, { getter } and { setter }:</strong> <a href="https://cythilya.github.io/2017/04/15/vue-computed/">Link1</a>, <a href="https://pjchender.blogspot.com/2017/05/vue-computed-getter-setter.html">link2</a>. I'm little surprised about { Computed } property can be set (by { setter }), and this will be two way binding.</li>
+  <li><strong>( Vue.js ) { Reactivity } in Vue (and its pitfalls):</strong> <a href="https://medium.com/js-dojo/reactivity-in-vue-js-and-its-pitfalls-de07a29c9407">Link</a>.</li>
+  <li><strong>( Vue.js ) { Reactivity } and { Vue.set() }:</strong> <a href="https://vuejs.org/v2/guide/reactivity.html">Link1</a>, <a href="https://vuejs.org/v2/api/#Vue-set">link2</a>. Still don't know much, and the real use case, about this. Just keep it saved for in case I need this. // It mentioned about you can use the shorthand <code>this.$set()</code>.</li>
+  <li><strong>( Vue.js ) { Reactivity }, array methods that Vue's { reactivity } supports:</strong> <a href="https://pjchender.blogspot.com/2017/05/vue-vue-reactivity.html">[那些關於 Vue 的小細節 ] 為什麼畫面沒有隨資料更新 - Vue 響應式原理（Reactivity）</a>。裡面提到 - "陣列部分：利用陣列索引直接設值時 ...", "使用 Vue 可觀察到的陣列方法 ...", "push()、pop()、shift()、unshift()、splice()、sort()、reverse() ...".</li>
+</ol>
+
+<h2>2019-04-29<a id="190428m223242"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-29.svg" alt="2019-04-29">
+</div>
+<ol>
+  <li><strong>( Music ) TWICE - LIKEY - { Smyang Piano } cover - mist version:</strong> <a href="https://youtu.be/_rERHbhcIB4">Link</a>.</li>
+  <li><strong>( Music ) TWICE - LIKEY - { DooPiano } cover:</strong> <a href="https://youtu.be/70Gm350zA9U">Link</a>.</li>
+  <li><strong>( Music ) TWICE - LIKEY - [ orchestration ]**[ re-arrange ]**[ remake ]:</strong>
+    <ol>
+      <li><strong>{ JunMan } remake:</strong> <a href="https://youtu.be/K13vW-sRtJA">Link1</a>, <a href="https://youtu.be/iunrE9GQxa8">link2</a>.</li>
+      <li><strong>{ 556pm } remake:</strong> <a href="https://youtu.be/g057RicqiEk">Link</a>.</li>
+      <li><strong>{ Nomimuhi } remake:</strong> <a href="https://youtu.be/3tCahcd-ykY">Link</a>.</li>
+      <li><strong>{ Inulloid } remake:</strong> <a href="https://youtu.be/LBUXtdGVq78?t=5081">Link</a>.</li>
+    </ol>
+  </li>
+  <li><strong>( Music ) Twice - Heart Shaker - { AZWZ } remake:</strong> <a href="https://youtu.be/ycZCEvnl9d0">Link</a>.</li>
+  <li><strong>( Video ) { TED-Ed } - How do dogs "see" with their noses? - Alexandra Horowitz :</strong> <a href="https://youtu.be/p7fXa2Occ_U">Link</a>.</li>
+  <li><strong>( Node.js ) Node equivalent of { python -m SimpleHTTPServer }?:</strong> <a href="https://stackoverflow.com/questions/22513544/node-equivalent-of-python-m-simplehttpserver">Link</a>. <code>npm install http-server -g</code>, then <code>http-server</code>.</li>
+  <li><strong>( Vue.js ) Deployment of Vue apps:</strong> <a href="https://cli.vuejs.org/guide/deployment.html">Link</a>.</li>
+  <li><strong>( Vue.js ) { vue.config.js } ,, common properties and description:</strong> <a href="https://cli.vuejs.org/config/">Link</a>.</li>
+  <li><strong>( Git ) ( Problem solving ) Fatal: 'origin' does not appear to be a git repository:</strong> <a href="https://stackoverflow.com/questions/15637507/fatal-origin-does-not-appear-to-be-a-git-repository">Link</a>. Use <code>git remote add origin url/to/your/fork</code> to "define" what is "origin" in your <code>.git/config</code> first.</li>
+  <li><strong>( Git ) { git init }:</strong> After <code>git init</code>, you will found <code>current working directory</code> have an extra <code>.git</code> file added.</li>
+  <li><strong>( Git ) { git add -A }:</strong> I don't know the use case.</li>
+  <li><strong>( Git ) { git push -f }:</strong> <a href="https://gitbook.tw/chapters/github/using-force-push.html">Link</a>. <code>-f</code> means "force", it overwrite remote repo <strong>even without warn you to pull first</strong>. This is useful when you deploy to gh-pages (because it is one way), but you got to be careful don't do anything wrong with this option.</li>
+  <li><strong>( Git ) Push commits to another branch:</strong> <a href="https://stackoverflow.com/questions/13897717/push-commits-to-another-branch/13897766">Link</a>. The key is that <code>master:gh-ages</code> syntax.</li>
+</ol>
+
+<h2>2019-04-30<a id="190430m082916"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-30.svg" alt="2019-04-30">
+</div>
+  <li><strong>190430 ( Programming ) My first { Vue.js } project { Doggo } # 190430m135836:</strong> <a href="/treegbBlog/19/04/30/190430m135836/">Link</a>. The project is initially done and <code>Deployed</code>.</li>
+  <li><strong>190430 ( Problem solving ) How I solved { vue } deployment ,, index.html ,, src path ,, sub-domain path missing #190430m120918:</strong> <a href="/treegbBlog/19/04/30/190430m120918/">Link</a>.</li>
+  <li><strong>( KPop ) { TWICE } TV - { SIXTEEN } - Episode 3 - Part 9</strong>
+    <ol>
+      <li><strong>Link:</strong> <a href="https://youtu.be/VonTf_LNN3A">Link</a>.</li>
+      <li><strong>About this series:</strong> This is actually very long full series, all the way through Episode 10.</li>
+      <li><strong>What I'v learned:</strong> At first, I thought, all [ music group ]-[ stars ]-[ celebrity ] are "artificial created" and could be "hyped", [ faked ]-[ make up ]. But I think I'm wrong, from this series, I start to know <code>JYP</code> are looking very specific type of inherently personality during selection, those personality <strong>could not be [ faked ]-[ make up ]</strong>, they have to be natually inherited, because things that is by [ faked ]-[ make up ] could not last long and could be recognized by audience in final no matter how. // So yes, they are stars and every member in 9 is unreplaceable and important, none is the best and could cover the whole game, they have their own ((different)) role for the bigger image. We can't have a team which members are all having "strong" image, we need "soft" part too, otherwise it is not good balanced. Few members in <code>Twice</code> was placed at that "soft" part (role) and that is import.</li>
+    </ol>
+  </li>
+  <li><strong>( KPop ) Becoming TWICE is not easy - { Mina }:</strong> <a href="https://youtu.be/170Hr7ckZQs">Link</a>.</li>
+  <li><strong>( KPop ) Becoming TWICE is not easy - { Jihyo }:</strong> <a href="https://youtu.be/qgFITlSMFLQ">Link</a>. Personality is sometimes more important than what he/she currently owns and inherits.</li>
+  <li><strong>( KPop ) { Mina } - Rhythmic Gymnastics hoof - 2016 Idol Star Championship:</strong> <a href="https://youtu.be/q-QCWbyLNe0">Link</a>. You Try to Throw something, but you don't Catch it later ... and it Bugs you so much ... ok, I'm too deep into programming ... .</li>
+  <li><strong>( KPop ) TWICE Mina - ballet</strong> <a href="https://youtu.be/AFTg6o-wP_k">Link</a>.</li>
 </ol>
 
 <h2>{ Pollash }<a id="190419m212225"></a></h2>
@@ -588,8 +655,8 @@ https://www.youtube.com/user/AmericanInstituteTW/videos
 <hr>
 
 <div class="facetList">
-Cmm: u190401m013644 x88lost x88fs c88log log88table c88current
-Current: ti88crr88y19 ti88crr88y19dw3 ti88crr88y19m04 ti88crr88y19m04d17 ti88crr88y19m04dw3 ti88crr88y19q2 ti88crr88y19q2dw3 ti88crr88y19w16 ti88crr88y19w16dw3
-Time (d): ti88y19 ti88y19dw1 ti88y19m04 ti88y19m04d01 ti88y19m04dw1 ti88y19q2 ti88y19q2dw1 ti88y19w14 ti88y19w14dw1
+Cmm: u190401m013644 x88lost x88fs c88log log88table
+Current: ti88crr88y19 ti88crr88y19dw3 ti88crr88y19m05 ti88crr88y19m05d01 ti88crr88y19m05dw3 ti88crr88y19q2 ti88crr88y19q2dw3 ti88crr88y19w18 ti88crr88y19w18dw3
+Time (d): ti88y19 ti88y19dw3 ti88y19m05 ti88y19m05d01 ti88y19m05dw3 ti88y19q2 ti88y19q2dw3 ti88y19w18 ti88y19w18dw3
 </div>
 {% endraw %}
